small changes & rtl support

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!doctype html>
-<html>
+<html dir="rtl" lang="he">
 
 <head>
 
 	<!-- Place this data between the <head> tags of your website -->
+	<meta charset="utf-8" />
 	<title>משל המצולעים - a playable post on the shape of society</title>
 	<meta name="description" content="עמוד אינטרקטיבי עם משחק שמדגים איך בחירות פגומות יכולות ליצור עולם פגום." />
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<!-- Schema.org markup for Google+ -->
 	<meta itemprop="name" content="משל המצולעים">
-	<meta itemprop="description" content="עמוד אינטרקטיבי עם משחק שמדגים איך בחירות פגומות יכולות ליצור עולם פגום.">
+	<meta itemprop="description" content="עמוד אינטרקטיבי עם משחק שמדגים איך בחירות רק קצת פגומות יכולות ליצור עולם  מאוד פגום.">
 	<meta itemprop="image" content="http://ncase.me/polygons/social/thumbnail.png">
 
 	<!-- Twitter Card data -->
@@ -52,11 +53,9 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 
-		<p><strong>This is a story of how harmless choices can make a harmful world.</strong></p>
+		<p><strong>זהו סיפור על איך בחיורות קצת פגומות יכולות ליצור עולם מאוד פגום.</strong></p>
 		<p>
-			These little cuties are 50% Triangles, 50% Squares, and 100% slightly shapist.
-			But only slightly!
-			In fact, every polygon <i>prefers</i> being in a diverse crowd:
+			המצולעים החמודים האלו הם 50% משולשים, 50% ריבועים, ו100% קצת צורניים. אבל רק קצת! למעשה, כל מצולע מעדיף להיות בקהל מגוון:
 		</p>
 
 		<iframe id="mini_intro" playable src="play/mini/mini_intro.html" width="800" height="385" scrolling="no"
