draft translation of some 70% of text

--- a/play/intro/intro.html
+++ b/play/intro/intro.html
@@ -70,6 +70,8 @@
 				<a target="_parent" href="//www.aularon.com/playables/polygons-ar/">العربيّة</a>
 				|
 				<a target="_parent" href="http://zlira.github.io/polygons/">Українська</a>
+				|
+				<a target="_parent" href="http://ncase.me/polygons-he">עברית</a>  <!--todo -->
 			</div>
 		</div>
 	</div>
