attempt at rtl italics (requires fixing, a new line is inserted for some reason...with 'span' doesnt work)

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 	<!-- CSS -->
 	<link href="css/index.css" rel="stylesheet" type="text/css">
+	<link href="css/left-italic.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -55,7 +56,9 @@
 
 		<p><strong>זהו סיפור על איך בחירות קצת פגומות יכולות ליצור עולם מאוד פגום.</strong></p>
 		<p>
-			המצולעים החמודים האלו הם 50% משולשים, 50% ריבועים, ו100% קצת צורניים. אבל רק קצת! למעשה, כל מצולע מעדיף להיות בקהל מגוון:
+			המצולעים החמודים האלו הם 50% משולשים, 50% ריבועים, ו100% קצת צורניים. אבל רק קצת! למעשה, כל מצולע
+			<div class="rtl-italic">מעדיף</div>
+			להיות בקהל מגוון:
 		</p>
 
 		<iframe id="mini_intro" playable src="play/mini/mini_intro.html" width="800" height="385" scrolling="no"
