--- a/play/mini/mini_bias_1.html
+++ b/play/mini/mini_bias_1.html
@@ -1,15 +1,16 @@
 <!doctype html>
-<html>
+<html dir="rtl" lang="he">
 <head>
 	<link href="mini.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<canvas id="canvas"></canvas>
 	<br>
-	<div style="text-align:center; margin:10px 0; color:#777">
-		wants to move if <span style="color:#dd3939">less than 33%</span> of
+	<div style="text-align:center; margin:10px 0; color:#777" dir="rtl">
+		מצלוע רוצה לעבור עם
+		<span style="color:#dd3939" >פחות מ33%</span >
 		<br>
-		their neighbors are like them
+		משכיניו הם כמוהו
 	</div>
 	<div id="reset" onclick="reset()">reset</div>
 
