--- a/play/mini/mini_nonconform.html
+++ b/play/mini/mini_nonconform.html
@@ -7,9 +7,10 @@
 	<canvas id="canvas"></canvas>
 	<br>
 	<div style="text-align:center; margin:10px 0; color:#777">
-		wants to move if <span style="color:#dd3939">more than 90%</span> of
+		מצלוע רוצה לעבור אם
+		<span style="color:#dd3939" >יותר מ90%</span >
 		<br>
-		their neighbors are like them
+		משכיניו הם כמוהו
 	</div>
 	<div id="reset" onclick="reset()">reset</div>
 
