--- a/play/mini/mini_bias_2.html
+++ b/play/mini/mini_bias_2.html
@@ -7,9 +7,10 @@
 	<canvas id="canvas"></canvas>
 	<br>
 	<div style="text-align:center; margin:10px 0; color:#777">
-		wants to move if <span style="color:#dd3939">less than 50%</span> of
+		מצלוע רוצה לעבור עם
+		<span style="color:#dd3939" >פחות מ50%</span >
 		<br>
-		their neighbors are like them
+		משכיניו הם כמוהו
 	</div>
 	<div id="reset" onclick="reset()">reset</div>
 
