--- a/play/mini/mini_bored.html
+++ b/play/mini/mini_bored.html
@@ -6,9 +6,11 @@
 <body>
 	<canvas id="canvas"></canvas>
 	<br>
-	<div style="text-align:center; margin:10px 0; color:#777; font-size:15px">
-		<span style="color:#dd3939">meh:</span>
-		all neighbors are like me. (also meh if i've got no neighbors)
+	<div style="text-align:center; margin:10px 0; color:#777; font-size:15px" dir="rtl">
+		<span style="color:#dd3939">בסדר:</span>
+		כל שכניי כמוני או
+		<br>
+		שאין לי אף שכן.
 	</div>
 
 	<script>
