--- a/play/mini/mini_happy.html
+++ b/play/mini/mini_happy.html
@@ -6,9 +6,11 @@
 <body>
 	<canvas id="canvas"></canvas>
 	<br>
-	<div style="text-align:center; margin:10px 0; color:#777; font-size:15px">
-		<span style="color:#dd3939">happy:</span>
-		2 out of 6 neighbors are like me. exactly 1/3.
+	<div style="text-align:center; margin:10px 0; color:#777; font-size:15px" dir="rtl">
+		<span style="color:#dd3939">שמח:</span>
+		2 מתוך 6 שכניי כמוני.
+		<br>
+		בדיוק 1/3.
 	</div>
 
 	<script>
