--- a/play/mini/mini_unhappy.html
+++ b/play/mini/mini_unhappy.html
@@ -6,9 +6,11 @@
 <body>
 	<canvas id="canvas"></canvas>
 	<br>
-	<div style="text-align:center; margin:10px 0; color:#777; font-size:15px">
-		<span style="color:#dd3939">unhappy:</span>
-		only 1 out of 6 neighbors are like me. less than 1/3.
+	<div style="text-align:center; margin:10px 0; color:#777; font-size:15px" dir="rtl">
+		<span style="color:#dd3939">עצוב:</span>
+		רק 1 מתוך 6 שכניי כמוני.
+		<br>
+		פחות מ- 1/3
 	</div>
 
 	<script>
