partial italics solution...couldn't help myself; looking forward to your fix

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<p><strong>זהו סיפור על איך בחירות קצת פגומות יכולות ליצור עולם מאוד פגום.</strong></p>
 		<p>
 			המצולעים החמודים האלו הם 50% משולשים, 50% ריבועים, ו100% קצת צורניים. אבל רק קצת! למעשה, כל מצולע
-			<div class="rtl-italic">מעדיף</div>
+			<span class="rtl-italic">מעדיף</span>
 			להיות בקהל מגוון:
 		</p>
 
@@ -65,7 +65,7 @@
 			style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-			ניתן להזיז את המצולעים רק כאשר הם לא מרוצים מהסביבה הקרובה שלהם. ברגע שהמצלועים בסדר עם איפה שהם נמצאים, אז אי אפשר להזיזהם, עד שיהפכו להיות לא מרוצים עם השכנים שלהם. יש למצולעים כלל אחד, פשוט:
+ניתן להזיז את המצולעים רק כאשר הם לא מרוצים מהסביבה הקרובה שלהם. ברגע שהמצלועים בסדר עם איפה שהם נמצאים,<span class="rtl-italic">אי אפשר להזיזהם, עד שיהפכו להיות לא מרוצים עם השכנים שלהם.</span> יש למצולעים כלל אחד, פשוט:
 		</p>
 
 		<p style="text-align:center">
@@ -189,7 +189,9 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 		<p>
-			רואה מה לא קורה?
+			רואה מה
+			<span class="rtl-italic">לא	</span>
+			קורה?
 			אין שינוי. לא מתחילים להתערבב מחדש.
 בעולם בו בעבר הייתה הטיה, זה לא מספיק פשוט להפוך להיות לא מוטה!
 אנו נצטרך לפעול בצורה אקטבית.
@@ -258,10 +260,12 @@
 			בקצרה ולסיכום:
 		</div>
 		<p>
-			<b>1. הטיה אינדיבידואלית קטנה -> הטיה קולקטיבית גדולה.</b>
+			<b>1. הטיה אינדיבידואלית קטנה &#x2190; הטיה קולקטיבית גדולה.</b>
 			<br>
 			<!--Micromotives, macrobehaviour...-->
-			כשמישהו אומר שתרבות מסויימת היא צורנית, הוא לא אומר שה אינדיבידואלים בה הם צורניתיים.
+			כשמישהו אומר שתרבות מסויימת היא צורנית, הוא לא אומר שה
+			<span class="rtl-italic">אינדיבידואלים</span>
+			בה הם צורניתיים.
 הוא לא תוקף אותך באופן אישי.
 		</p>
 		<p>
