Another translated image, added Alef to index.html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 	<!-- Schema.org markup for Google+ -->
 	<meta itemprop="name" content="משל המצולעים">
-	<meta itemprop="description" content="עמוד אינטרקטיבי עם משחק שמדגים איך בחירות רק קצת פגומות יכולות ליצור עולם  מאוד פגום.">
-	<meta itemprop="image" content="http://ncase.me/polygons/social/thumbnail.png">
+	<meta itemprop="description"
+		content="עמוד אינטרקטיבי עם משחק שמדגים איך בחירות רק קצת פגומות יכולות ליצור עולם  מאוד פגום.">
+	<meta itemprop="image" content="./social/thumbnail.png">
 
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary_large_image">
@@ -20,17 +21,18 @@
 	<meta name="twitter:title" content="משל המצולעים">
 	<meta name="twitter:description" content="עמוד אינטרקטיבי עם משחק שמדגים איך בחירות פגומות יכולות ליצור עולם פגום.">
 	<meta name="twitter:creator" content="@vihartvihart">
-	<meta name="twitter:image" content="http://ncase.me/polygons/social/thumbnail.png">
+	<meta name="twitter:image" content="./social/thumbnail.png">
 
 	<!-- Open Graph data -->
 	<meta property="og:title" content="משל המצולעים">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://ncase.me/polygons">
-	<meta property="og:image" content="http://ncase.me/polygons/social/thumbnail.png">
+	<meta property="og:image" content="./social/thumbnail.png">
 	<meta property="og:description" content="עמוד אינטרקטיבי עם משחק שמדגים איך בחירות פגומות יכולות ליצור עולם פגום.">
 	<meta property="og:site_name" content="משל המצולעים">
 
 	<!-- CSS -->
+	<link href="css/fonts/alef-v11-latin_hebrew.css" rel="stylesheet" type="text/css">
 	<link href="css/index.css" rel="stylesheet" type="text/css">
 	<link href="css/left-italic.css" rel="stylesheet" type="text/css">
 
@@ -65,7 +67,9 @@
 			style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-ניתן להזיז את המצולעים רק כאשר הם לא מרוצים מהסביבה הקרובה שלהם. ברגע שהמצלועים בסדר עם איפה שהם נמצאים,<span class="rtl-italic">אי אפשר להזיזהם, עד שיהפכו להיות לא מרוצים עם השכנים שלהם.</span> יש למצולעים כלל אחד, פשוט:
+			ניתן להזיז את המצולעים רק כאשר הם לא מרוצים מהסביבה הקרובה שלהם. ברגע שהמצלועים בסדר עם איפה שהם
+			נמצאים,<span class="rtl-italic">אי אפשר להזיזהם, עד שיהפכו להיות לא מרוצים עם השכנים שלהם.</span> יש
+			למצולעים כלל אחד, פשוט:
 		</p>
 
 		<p style="text-align:center">
@@ -85,11 +89,13 @@
 		</div>
 
 		<p>
-			בכלל לא מזיק, נכון? כל מצולע היה שמח להיות בשכונה מגוונת. האם באמת ייתכן שהטיה אינדיבידואלית כו קטנה יכולה להשפיע על החברה בצורה חזקה? ובכן...
+			בכלל לא מזיק, נכון? כל מצולע היה שמח להיות בשכונה מגוונת. האם באמת ייתכן שהטיה אינדיבידואלית כו קטנה יכולה
+			להשפיע על החברה בצורה חזקה? ובכן...
 		</p>
 		<div class="instruction">
 			גרור ושחרר מצולעים לא שמחים עד שכולם שמחים ומרוצים:<br>
-			<span style="font-size:18px">(פשות תעבירי את המצולים למקומות פנויים בצורה אקראית. אל תחשבי על זה לעומק.)</span>
+			<span style="font-size:18px">(פשות תעבירי את המצולים למקומות פנויים בצורה אקראית. אל תחשבי על זה
+				לעומק.)</span>
 		</div>
 
 	</div>
@@ -105,14 +111,16 @@
 			ואכן... חברת המצלועים שלנו הפכה להיות מופרדת מאוד. לא משמח בכלל!
 		</p>
 		<p>
-			שכונה לפעמים במקרה הופכת להיות מרובעת, וזה לא אשמת אף אחד שמשולשים לא רוצים להישאר שם עכשיו. באותו אופן, שכונה משולשת הייתה מברכת שכן מרובע, אבל אין למשולשים מה לעשות אם המרובעים לא מעוניינים לבוא.
+			שכונה לפעמים במקרה הופכת להיות מרובעת, וזה לא אשמת אף אחד שמשולשים לא רוצים להישאר שם עכשיו. באותו אופן,
+			שכונה משולשת הייתה מברכת שכן מרובע, אבל אין למשולשים מה לעשות אם המרובעים לא מעוניינים לבוא.
 		</p>
 
 		<iframe id="mini_neighborhood" playable src="play/mini/mini_neighborhood.html" width="730" height="240"
 			scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-			בקטע הבא, צורות לא מרוצות עוברות אוטומטית למקומות פנויים בצורה אקראית. יש גם גרף שעוקב אחרי אחוז ההפרדה בחברה לאורך זמן.
+			בקטע הבא, צורות לא מרוצות עוברות אוטומטית למקומות פנויים בצורה אקראית. יש גם גרף שעוקב אחרי אחוז ההפרדה
+			בחברה לאורך זמן.
 		</p>
 		<div class="instruction">
 			הפעלי את הסימולציה כמה פעמים. מה קורה?
@@ -128,7 +136,8 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 		<p>
-			למה זה קורה? אלו מצולעים טובים, מצולעים נחמדים. ובכל זאת, למרות שלכל מצולע יש הטיה קטנה, החברה כולה נסדקת ומתפצלת.
+			למה זה קורה? אלו מצולעים טובים, מצולעים נחמדים. ובכל זאת, למרות שלכל מצולע יש הטיה קטנה, החברה כולה נסדקת
+			ומתפצלת.
 		</p>
 
 		<iframe id="mini_checkerboard" playable src="play/mini/mini_checkerboard.html" width="730" height="240"
@@ -139,9 +148,9 @@
 		</p>
 		<p>
 			שוויון בחברה נמצא בשיווי משקל לא יציב.
-ההטיה הקטנה ביותר יכולה לדחוף חברה שלמה מעבר לנקודת המפנה.
-ובכן, מה היה קורה אם היינו מלמדים את המצולעים האלו להיות בלי שום הטיה בכלל?
-(או אם אתה מרגיש לא סימפטי היום, בעלי יותר הטיה?)
+			ההטיה הקטנה ביותר יכולה לדחוף חברה שלמה מעבר לנקודת המפנה.
+			ובכן, מה היה קורה אם היינו מלמדים את המצולעים האלו להיות בלי שום הטיה בכלל?
+			(או אם אתה מרגיש לא סימפטי היום, בעלי יותר הטיה?)
 		</p>
 		<div class="instruction">
 			השתמש במחוון כדי לקבוע את ההטיה האישית של המצלועים:
@@ -157,7 +166,8 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 		<p>
-			שימי לב לכמה יותר מופרדת החברה נהיית כאשר את מגדילה את ההטיה ליותר מ33%. מה אם הסף היה על 50%? זה נשמא סביר שמצולע יעדיף לא להיות המיעוט בשכונה...
+			שימי לב לכמה יותר מופרדת החברה נהיית כאשר את מגדילה את ההטיה ליותר מ33%. מה אם הסף היה על 50%? זה נשמא סביר
+			שמצולע יעדיף לא להיות המיעוט בשכונה...
 		</p>
 
 		<br>
@@ -171,8 +181,8 @@
 
 		<p>
 			אם פשוט נהפוך את ההטיה של כולם לאפס, אז הכל יהיה בסדר, נכון?
-לא, זה לא כל כך פשוט. העולם האמיתי לא מתחדש כל יום עם מעברים אקראים של תושבים.
-אתה לא עובר מגורים סתם ככה כל יום.
+			לא, זה לא כל כך פשוט. העולם האמיתי לא מתחדש כל יום עם מעברים אקראים של תושבים.
+			אתה לא עובר מגורים סתם ככה כל יום.
 		</p>
 
 		<div class="instruction">
@@ -190,19 +200,20 @@
 	<div class="chapter">
 		<p>
 			רואה מה
-			<span class="rtl-italic">לא	</span>
+			<span class="rtl-italic">לא </span>
 			קורה?
 			אין שינוי. לא מתחילים להתערבב מחדש.
-בעולם בו בעבר הייתה הטיה, זה לא מספיק פשוט להפוך להיות לא מוטה!
-אנו נצטרך לפעול בצורה אקטבית.
-מה אם המצלועים היו רוצים לחפש קצת יותר גיוון?
+			בעולם בו בעבר הייתה הטיה, זה לא מספיק פשוט להפוך להיות לא מוטה!
+			אנו נצטרך לפעול בצורה אקטבית.
+			מה אם המצלועים היו רוצים לחפש קצת יותר גיוון?
 		</p>
 
 		<iframe id="mini_nonconform" playable src="play/mini/mini_nonconform.html" width="400" height="440"
 			scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-			למרות שכל מצולע בסדר עם זה שעד 90% מהשכניו יהיו כמוהו, כולם מתערבבים! בואו נראה את זה בקני מידה יותר גדולים כאשר אנחנו משנים את כמות ההטיה והאי-הטיה של המצלועים.
+			למרות שכל מצולע בסדר עם זה שעד 90% מהשכניו יהיו כמוהו, כולם מתערבבים! בואו נראה את זה בקני מידה יותר גדולים
+			כאשר אנחנו משנים את כמות ההטיה והאי-הטיה של המצלועים.
 		</p>
 		<div class="instruction">
 			בעולם שהתחיל במצב מופרד, מה יקרה אם המצולעים ידרשו אפילו קצת גיוון בסביבתם?
@@ -219,8 +230,8 @@
 	<div class="chapter">
 		<p>
 			כל מה שנדרש זה שינוי תפיסה של מה היא סביבה מקובלת.
-אז, מצלועים עמיתים, זכרו שלא מדובר על משולשים נגד ריבועים,
-אלא על ההחלטה לגבי באיזה עולם אנחנו רוצים לחיות, ולהסתפק בלא פחות.
+			אז, מצלועים עמיתים, זכרו שלא מדובר על משולשים נגד ריבועים,
+			אלא על ההחלטה לגבי באיזה עולם אנחנו רוצים לחיות, ולהסתפק בלא פחות.
 		</p>
 		<p style="text-align:center">
 			<b>
@@ -266,21 +277,21 @@
 			כשמישהו אומר שתרבות מסויימת היא צורנית, הוא לא אומר שה
 			<span class="rtl-italic">אינדיבידואלים</span>
 			בה הם צורניתיים.
-הוא לא תוקף אותך באופן אישי.
+			הוא לא תוקף אותך באופן אישי.
 		</p>
 		<p>
 			<b>2. העבר רודף את ההווה.</b>
 			<br>
 			הרצפה בחדר שינה שלך לא מפסיקה להיות מלוכלכת רק בגלל שהפסקת לזרוק אוכל עלייה.
-יצירת שוויון זה כמו נקיון: זה דורש עבודה. וזה עבודה שלא מסתיימת.
+			יצירת שוויון זה כמו נקיון: זה דורש עבודה. וזה עבודה שלא מסתיימת.
 		</p>
 		<p>
 			<b>3. דרוש גיוון בקרביך.</b>
 			<br>
 			אם הטיות קטנות יצרו את הבלגן שאנו נמצאים בו היום, אי-הטיות קטנות עשויות לתקן את זה.
-הבט סביבך. החברים שלך, הקולגות שלך, את סביבת עבודותך.
-אם כולכם משולשים, אתם מפספסים כמה ריבועים מדהימים בחייכם -
-וזה לא הוגן לאף אחד. תשיט יד, מעבר לשכניך המיידים ולריבועים הלא מוכרים.
+			הבט סביבך. החברים שלך, הקולגות שלך, את סביבת עבודותך.
+			אם כולכם משולשים, אתם מפספסים כמה ריבועים מדהימים בחייכם -
+			וזה לא הוגן לאף אחד. תשיט יד, מעבר לשכניך המיידים ולריבועים הלא מוכרים.
 		</p>
 		<iframe playable src="play/mini/mini_ending.html" width="600" height="80" scrolling="no"
 			style="margin:0 auto;display:block" embedded></iframe>
@@ -296,16 +307,18 @@
 			<div style="font-size:16px; line-height:18px">
 
 				סימולצית ההפרדה החמודה שלנו מבוססת על עבודתו של תיאורטיקן המשחקים וזוכה פרס נובל,
-תומאס שלינג. לדייק, ההדמיה מבוססת על המאמר שלו משנת 1971,
+				תומאס שלינג. לדייק, ההדמיה מבוססת על המאמר שלו משנת 1971,
 				<a target="_blank" href="http://www.stat.berkeley.edu/~aldous/157/Papers/Schelling_Seg_Models.pdf">
 					מודלים דינמים של הפרדה.</a>
 				בנינו על גבי זה והראנו כיצד דרישה קטנה של גיוון יכולה
-לגרום להתערבבות של שכונות. במילים אחרות, נתנו למודל שלו סוף טוב.
+				לגרום להתערבבות של שכונות. במילים אחרות, נתנו למודל שלו סוף טוב.
 
 				<br><br>
 
-				המודל של שלינג מציג את הרעיון הכללי של הפרדה, אך כמובן שהמציאות היא יותר ניואנסית. אולי תהני מלקרוא נתונים מהעולם האמיתי, כמו ממאמרו של קלארק משנת 1991,
-				<a target="_blank" href="http://smg.media.mit.edu/library/Clark.ResidentialSegregation.pdf">מבחן למודל ההפרדה של שלינג</a>.
+				המודל של שלינג מציג את הרעיון הכללי של הפרדה, אך כמובן שהמציאות היא יותר ניואנסית. אולי תהני מלקרוא
+				נתונים מהעולם האמיתי, כמו ממאמרו של קלארק משנת 1991,
+				<a target="_blank" href="http://smg.media.mit.edu/library/Clark.ResidentialSegregation.pdf">מבחן למודל
+					ההפרדה של שלינג</a>.
 
 				<br><br>
 
