--- a/play/mini/mini_bias_1.html
+++ b/play/mini/mini_bias_1.html
@@ -1,31 +1,34 @@
 <!doctype html>
 <html dir="rtl" lang="he">
+
 <head>
 	<link href="mini.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
 	<canvas id="canvas"></canvas>
 	<br>
 	<div style="text-align:center; margin:10px 0; color:#777" dir="rtl">
-		מצלוע רוצה לעבור עם
-		<span style="color:#dd3939" >פחות מ33%</span >
+		מצלוע רוצה לעבור אם
+		<span style="color:#dd3939">פחות מ33%</span>
 		<br>
 		משכיניו הם כמוהו
 	</div>
-	<div id="reset" onclick="reset()">reset</div>
+	<div id="reset" onclick="reset()">איפוס</div>
 
 	<script>
-	var TILE_SIZE = 100;
-	var PEEP_SIZE = 100;
+		var TILE_SIZE = 100;
+		var PEEP_SIZE = 100;
 
-	var GRID = [
-		[1,2,1],
-		[2,0,2],
-		[1,2,1]
-	];
+		var GRID = [
+			[1, 2, 1],
+			[2, 0, 2],
+			[1, 2, 1]
+		];
 	</script>
 	<script src="../lib/Mouse.js"></script>
 	<script src="mini.js"></script>
 	<script src="mini_blah.js"></script>
 </body>
+
 </html>
