--- a/play/mini/mini_intro.html
+++ b/play/mini/mini_intro.html
@@ -1,29 +1,31 @@
 <!doctype html>
 <html>
+
 <head>
 	<link href="mini.css" rel="stylesheet" type="text/css">
 	<style>
-	body{
-		background: url(dragging.png);
-		background-repeat: no-repeat;
-	}
+		body {
+			background: url(dragging.png);
+			background-repeat: no-repeat;
+		}
 	</style>
 </head>
+
 <body>
 	<canvas id="canvas"></canvas>
-	<div id="reset" onclick="reset()">reset</div>
+	<div id="reset" onclick="reset()">איפוס</div>
 
 	<script>
-	var TILE_SIZE = 65;
-	var PEEP_SIZE = 65;
+		var TILE_SIZE = 65;
+		var PEEP_SIZE = 65;
 
-	var GRID = [
-		[1,1,1,0,0,0,0,0,0,2,1,2],
-		[1,1,1,0,0,0,0,0,0,1,2,1],
-		[1,1,2,0,0,0,0,0,0,0,1,2],
-		[1,1,1,0,0,0,0,0,0,1,2,1],
-		[1,1,1,0,0,0,0,0,0,2,1,2]
-	];
+		var GRID = [
+			[1, 1, 1, 0, 0, 0, 0, 0, 0, 2, 1, 2],
+			[1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 2, 1],
+			[1, 1, 2, 0, 0, 0, 0, 0, 0, 0, 1, 2],
+			[1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 2, 1],
+			[1, 1, 1, 0, 0, 0, 0, 0, 0, 2, 1, 2]
+		];
 	</script>
 	<script src="../lib/Mouse.js"></script>
 	<script src="mini.js"></script>
@@ -32,4 +34,5 @@
 		window.IS_IN_SIGHT = true;
 	</script>
 </body>
+
 </html>
