--- a/play/mini/mini_neighborhood.html
+++ b/play/mini/mini_neighborhood.html
@@ -1,24 +1,27 @@
 <!doctype html>
 <html>
+
 <head>
 	<link href="mini.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
 	<canvas id="canvas"></canvas>
-	<div id="reset" onclick="reset()">reset</div>
+	<div id="reset" onclick="reset()">איפוס</div>
 
 	<script>
-	var TILE_SIZE = 60;
-	var PEEP_SIZE = 60;
+		var TILE_SIZE = 60;
+		var PEEP_SIZE = 60;
 
-	var GRID = [
-		[2,2,2,2,2,2,1,1,1,1,1,1],
-		[2,2,0,1,2,2,1,1,2,0,1,1],
-		[2,2,2,2,2,2,1,1,1,1,1,1]
-	];
+		var GRID = [
+			[2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 1, 1],
+			[2, 2, 0, 1, 2, 2, 1, 1, 2, 0, 1, 1],
+			[2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 1, 1]
+		];
 	</script>
 	<script src="../lib/Mouse.js"></script>
 	<script src="mini.js"></script>
 	<script src="mini_blah.js"></script>
 </body>
+
 </html>
