--- a/play/mini/mini_nonconform.html
+++ b/play/mini/mini_nonconform.html
@@ -1,36 +1,39 @@
 <!doctype html>
 <html>
+
 <head>
 	<link href="mini.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
 	<canvas id="canvas"></canvas>
 	<br>
 	<div style="text-align:center; margin:10px 0; color:#777">
 		מצלוע רוצה לעבור אם
-		<span style="color:#dd3939" >יותר מ90%</span >
+		<span style="color:#dd3939">יותר מ90%</span>
 		<br>
 		משכיניו הם כמוהו
 	</div>
-	<div id="reset" onclick="reset()">reset</div>
+	<div id="reset" onclick="reset()">איפוס</div>
 
 	<script>
-	var TILE_SIZE = 80;
-	var PEEP_SIZE = 80;
+		var TILE_SIZE = 80;
+		var PEEP_SIZE = 80;
 
-	var GRID = [
-		[1,1,0,2,2],
-		[1,1,0,2,2],
-		[1,1,0,2,2],
-		[1,1,0,2,2]
-	];
+		var GRID = [
+			[1, 1, 0, 2, 2],
+			[1, 1, 0, 2, 2],
+			[1, 1, 0, 2, 2],
+			[1, 1, 0, 2, 2]
+		];
 	</script>
 	<script src="../lib/Mouse.js"></script>
 	<script src="mini.js"></script>
 	<script src="mini_blah.js"></script>
 	<script>
-	NONCONFORM = 0.90;
-	BIAS = 0.00;
+		NONCONFORM = 0.90;
+		BIAS = 0.00;
 	</script>
 </body>
+
 </html>
