further translations; hebrew ngos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 	<!-- CSS -->
 	<link href="css/fonts/alef-v11-latin_hebrew.css" rel="stylesheet" type="text/css">
 	<link href="css/index.css" rel="stylesheet" type="text/css">
-	<link href="css/left-italic.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -59,7 +58,7 @@
 		<p><strong>זהו סיפור על איך בחירות קצת פגומות יכולות ליצור עולם מאוד פגום.</strong></p>
 		<p>
 			המצולעים החמודים האלו הם 50% משולשים, 50% ריבועים, ו100% קצת צורניים. אבל רק קצת! למעשה, כל מצולע
-			<span class="rtl-italic">מעדיף</span>
+			<i>מעדיף</i>
 			להיות בקהל מגוון:
 		</p>
 
@@ -68,8 +67,9 @@
 
 		<p>
 			ניתן להזיז את המצולעים רק כאשר הם לא מרוצים מהסביבה הקרובה שלהם. ברגע שהמצלועים בסדר עם איפה שהם
-			נמצאים,<span class="rtl-italic">אי אפשר להזיזהם, עד שיהפכו להיות לא מרוצים עם השכנים שלהם.</span> יש
-			למצולעים כלל אחד, פשוט:
+			נמצאים
+			<i>אי אפשר להזיזהם, עד שיהפכו להיות לא מרוצים עם השכנים שלהם.</i>
+			יש למצולעים כלל אחד, פשוט:
 		</p>
 
 		<p style="text-align:center">
@@ -119,7 +119,7 @@
 			scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-			בקטע הבא, צורות לא מרוצות עוברות אוטומטית למקומות פנויים בצורה אקראית. יש גם גרף שעוקב אחרי אחוז ההפרדה
+			בקטע הבא, מצולעות לא מרוצות עוברות אוטומטית למקומות פנויים בצורה אקראית. יש גם גרף שעוקב אחרי אחוז ההפרדה
 			בחברה לאורך זמן.
 		</p>
 		<div class="instruction">
@@ -200,7 +200,7 @@
 	<div class="chapter">
 		<p>
 			רואה מה
-			<span class="rtl-italic">לא </span>
+			<i>לא </i>
 			קורה?
 			אין שינוי. לא מתחילים להתערבב מחדש.
 			בעולם בו בעבר הייתה הטיה, זה לא מספיק פשוט להפוך להיות לא מוטה!
@@ -235,15 +235,15 @@
 		</p>
 		<p style="text-align:center">
 			<b>
-				GET THEM ALL IN THE BOX OF
-				<span style="color:hsl(0,90%,60%)">ח</span>
-				<span style="color:hsl(36,90%,60%)">ב</span>
-				<span style="color:hsl(72,90%,45%)">ר</span>
-				<span style="color:hsl(108,90%,60%)">ו</span>
-				<span style="color:hsl(144,90%,60%)">ת</span>
+				 תכינסי את כל המצולעות  לתיבת
+				<span style="color:hsl(0,90%,60%)">ה</span>
+				<span style="color:hsl(36,90%,60%)">ח</span>
+				<span style="color:hsl(72,90%,45%)">ב</span>
+				<span style="color:hsl(108,90%,60%)">ר</span>
+				<span style="color:hsl(144,90%,60%)">ו</span>
+				<span style="color:hsl(180,90%,60%)">ת</span>
 				<br>
-				<span style="font-size:18px">(hint: don't move them straight to the box; keep the pairs close
-					together)</span>
+				<span style="font-size:18px">(רמז: אל תעבירי אותם ישר לתיבה; שמרי על הזוגות קרוב אחד לשני)</span>
 			</b>
 		</p>
 
@@ -275,7 +275,7 @@
 			<br>
 			<!--Micromotives, macrobehaviour...-->
 			כשמישהו אומר שתרבות מסויימת היא צורנית, הוא לא אומר שה
-			<span class="rtl-italic">אינדיבידואלים</span>
+			<i>אינדיבידואלים</i>
 			בה הם צורניתיים.
 			הוא לא תוקף אותך באופן אישי.
 		</p>
@@ -334,17 +334,16 @@
 
 				המסר הגדול של ימינו הוא שדרישה של מעט גיוון בסביבות שלך יוצרת בסוף הבדל עצום. תסתכל על:
 				<a target="_blank" href="http://plzdiversifyyourpanel.tumblr.com/">Plz Diversify Your Panel</a>,
-				an initiative where overrepresented speakers pledge not
-				to speak on panels without diverse representation.
-
+				 יוזמה שבה דוברים שמיוצגים יתר על המידה מתחייבים לא לדבר על פאנלים ללא ייצוג מגוון.
 				<br><br>
 
-				Our "playable post" was inspired by Bret Victor's
+				הפוסט "משחק" הזה נוצר בהשראת האתר
 				<a target="_blank" href="http://worrydream.com/ExplorableExplanations/">
-					Explorable Explanations</a> and Ian Bogost's
+					Explorable Explanations</a>
+				של ברט ויקטור ו
 				<a target="_blank" href="http://bogost.com/books/persuasive_games/">
-					procedural rhetoric</a>.
-
+					procedural rhetoric</a>
+				של איאן בוגוסט.
 				<br><br>
 				<div style="border-bottom: 2px dashed #666"></div>
 
@@ -354,20 +353,17 @@
 
 					<b style="font-size:25px;">תתרמו לגיוון!</b>
 					<br>
-					<a target="_blank" href="http://www.blackgirlscode.com/">Black Girls Code</a>
-					- gives coding lessons to girls of color
+					<a target="_blank" href="https://www.tech-career.org/">tech-career</a>
+					- מכשיר יוצאי אתיופיה בתכנים טכנולוגים על מנת לשלבם בתעשייה
 					<br>
-					<a target="_blank" href="http://girlswhocode.com/">Girls Who Code</a>
-					- teaches high school girls to code
+					<a target="_blank" href="https://she-codes.org/he/home-heb/">she codes</a>
+					- מלמד נשים לתכנת במטרה שישראל תגיע ל50% מפתחות תכנה
 					<br>
-					<a target="_blank" href="http://code2040.org/">Code 2040</a>
-					- helps blacks &amp; latina/os get into tech
+					<a target="_blank" href="http://code2040.org/">tsofen</a>
+					- פועל למען הכשרה ושילוב של ערבי ישראל בהיי-טק
 					<br>
-					<a target="_blank" href="http://codeliberation.org/">Code Liberation</a>
-					- free workshops to help women make videogames
-					<br>
-					<a target="_blank" href="http://www.patreon.com/ncase">Nicky's Patreon</a>
-					- makes public domain playables (such as this one!)
+					<a target="_blank" href="http://www.patreon.com/ncase">הפטריאון של ניקי</a>
+					- מייצר בלוגי משחק ברשות הציבור (כמו האחד הזה!)
 
 				</span>
 
