--- a/play/outro/outro.html
+++ b/play/outro/outro.html
@@ -106,24 +106,22 @@
 
 		</div>
 		<div id="pd_text">
-			<span style="font-size:35px; color:#fff">this playable post is
-				<a target="_blank" href="http://creativecommons.org/publicdomain/zero/1.0/" style="color:#fff">public
-					domain</a>.
+			<span style="font-size:35px; color:#fff">פוסט משחק זה נמצא
+				<a target="_blank" href="http://creativecommons.org/publicdomain/zero/1.0/" style="color:#fff"> ברשות הציבור</a>.
 			</span>
 			<div style="width:600px; margin:5px auto; font-size:18px; letter-spacing:0; font-weight:normal">
-				please feel free to use this in your classrooms,
-				make video/picture/text adaptations,
-				or modify the <a href="https://github.com/ncase/polygons" target="_blank">source code</a>!
-				attribution is not mandatory, but super appreciated.
-				we are <a href="http://vihart.com/" target="_blank">vi hart</a> and <a
+				בבקשה תרגישו חופשי להשתמש בפוסט זה בשיעוריכם, לבצע התאמות וידאו/תמונה/טקסט, ולשנות את <a href="https://github.com/ncase/polygons" target="_blank">הקוד מקור</a>!
+				מתן קרדיט אינו חובה, אבל מוערך מאוד.
+				אנחנו <a href="http://vihart.com/" target="_blank">vi hart</a> ו <a
 					href="http://www.patreon.com/ncase" target="_blank">nicky case</a>.
 			</div>
 			<div style="width:600px; margin:25px auto; font-size:18px; letter-spacing:0; font-weight:normal">
-				show us how you're using and remixing Parable of the Polygons!
+				תספרו לנו כיצד אתם משתמשים ומשנים את הפוסט של משל המצולעים!
 				<br>
-				tweet us at
-				<a href="https://twitter.com/vihartvihart" target="_blank">@vihartvihart</a> and
-				<a href="https://twitter.com/ncasenmare" target="_blank">@ncasenmare</a>.
+				<div dir="ltr">
+				<a href="https://twitter.com/vihartvihart" target="_blank">@vihartvihart</a>
+				<a href="https://twitter.com/ncasenmare" target="_blank">@ncasenmare</a>
+				</div>
 			</div>
 		</div>
 
