had a native hebrew speaker review the hebrew; everything changed to plural form

--- a/play/mini/mini_nonconform.html
+++ b/play/mini/mini_nonconform.html
@@ -9,7 +9,7 @@
 	<canvas id="canvas"></canvas>
 	<br>
 	<div style="text-align:center; margin:10px 0; color:#777">
-		מצלוע רוצה לעבור אם
+		מצולע רוצה לעבור אם
 		<span style="color:#dd3939">יותר מ90%</span>
 		<br>
 		משכיניו הם כמוהו
