Reworded some of the hebrew text, including in the graph

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<p>
 			ניתן להזיז את המצולעים רק כאשר הם לא מרוצים מהסביבה הקרובה שלהם. ברגע שהמצלועים בסדר עם איפה שהם
 			נמצאים
-			<i>אי אפשר להזיזהם, עד שיהפכו להיות לא מרוצים עם השכנים שלהם.</i>
+			<i>אי אפשר להזיזם, עד שיהפכו להיות לא מרוצים בקרבת השכנים שלהם.</i>
 			יש למצולעים כלל אחד, פשוט:
 		</p>
 
@@ -94,7 +94,7 @@
 		</p>
 		<div class="instruction">
 			גררו ושחררו מצולעים לא שמחים עד שכולם יהיו שמחים ומרוצים:<br>
-			<span style="font-size:18px">(פשות תעבירו את המצולים למקומות פנויים בצורה אקראית. אל תחשבו על זה
+			<span style="font-size:18px">(פשוט תעבירו את המצולים למקומות פנויים בצורה אקראית. אל תחשבו על זה
 				לעומק.)</span>
 		</div>
 
@@ -108,11 +108,11 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 		<p>
-			ואכן... חברת המצלועים שלנו הפכה להיות מופרדת מאוד. אוי ואי!
+			ואכן... חברת המצלועים שלנו הפכה להיות מופרדת מאוד. ואי ווי!
 		</p>
 		<p>
-			שכונה לפעמים במקרה הופכת להיות מרובעת, וזה לא אשמת אף אחד שמשולשים לא רוצים להישאר שם עכשיו. באותו אופן,
-			שכונה משולשת הייתה מברכת שכן מרובע, אבל אין למשולשים מה לעשות אם המרובעים לא מעוניינים לבוא.
+			שכונה הופכת לפעמים להיות מרובעת במקרה, וזה לא אשמת אף אחד שהמשולשים לא רוצים להישאר שם עכשיו. באותו אופן,
+			שכונה משולשת הייתה מקדמת בברכה שכן מרובע, אבל אין למשולשים מה לעשות אם המרובעים לא מעוניינים לעבור.
 		</p>
 
 		<iframe id="mini_neighborhood" playable src="play/mini/mini_neighborhood.html" width="730" height="240"
@@ -136,7 +136,7 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 		<p>
-			למה זה קורה? מדובר במצולעים טובים נחמדים, ולמרות זאת, מאחר ולכל מצולע יש הטיה קטנה, החברה כולה נסדקה
+			מדוע זה קורה? מדובר במצולעים טובים ונחמדים, ולמרות זאת, מאחר ולכל מצולע יש הטיה קטנה, החברה כולה נסדקה
 			והתפצלה.
 		</p>
 
@@ -144,11 +144,11 @@
 			scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-			<strong>הטיה קטנה של מצולע בודד עלולה לגרום להטיה קולקטיבית קשה.</strong>
+			<strong>הטיה קטנה של מצולע בודד עשויה לגרום להטיה קולקטיבית משמעותית.</strong>
 		</p>
 		<p>
 			שוויון בחברה נמצא בשיווי משקל לא יציב.
-			ההטיה הקטנה ביותר יכולה לדחוף חברה שלמה מעבר לנקודת האל חזור.
+			ההטיה הקטנה ביותר יכולה לדרדר חברה שלמה מעבר לנקודת האל חזור.
 			מה היה קורה אם היינו מחנכים את המצולעים להיות לא מוטים בכלל?
 			(או אם אתם מרגישים לא סימפטיים היום, בעלי יותר הטיה?)
 		</p>
@@ -166,7 +166,8 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 		<p>
-			שימו לב לכמה יותר מופרדת החברה נהיית כאשר אתם מגדילים את ההטיה ליותר מ33%. מה אם הסף היה מעל 50%? זה נשמא סביר
+			שימו לב לעד כמה החברה נהיית בדלנית כאשר אתם מגדילים את ההטיה ליותר מ-33%. מה אם הסף היה מעל 50%? זה נשמא
+			סביר
 			שמצולע יעדיף לא להיות המיעוט בשכונה...
 		</p>
 
@@ -203,16 +204,18 @@
 			קורה?
 			אין שינוי. לא מתחילים להתערבב מחדש.
 			בעולם בו בעבר הייתה הטיה, זה לא מספיק להפוך להיות לא מוטה!
-			אנו נצטרך לפעול בצורה אקטיבית.
-			מה אם היינו מחנכים את המצלועים לחפש קצת יותר גיוון?
+			אנו נצטרך לפעול בצורה יזומה כדי ליצור חברה מעורבת.
+			מה אם היינו מחנכים את המצולעים לחפש קצת יותר גיוון?
 		</p>
 
 		<iframe id="mini_nonconform" playable src="play/mini/mini_nonconform.html" width="400" height="440"
 			scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-			למרות שכל מצולע בסדר עם זה שעד 90% מהשכניו יהיו כמוהו, כולם מתערבבים! בואו נראה את זה בקנה מידה יותר גדול
-			כאשר נשנה את כמות ההטיה והאי-הטיה של המצלועים.
+			למרות שכל מצולע בסדר עם זה שעד 90% מהשכניו יהיו כמוהו, כולם מתערבבים!
+			<br />
+			בואו נראה את זה בקנה מידה יותר גדול
+			כאשר נשנה את כמות ההטיה והאי ההטיה של המצולעים.
 		</p>
 		<div class="instruction">
 			בעולם שהתחיל במצב מופרד, מה יקרה אם המצולעים ידרשו אפילו קצת גיוון בסביבתם?
@@ -234,7 +237,7 @@
 		</p>
 		<p style="text-align:center">
 			<b>
-				 הכניסו את כל המצולעים לתיבת
+				הכניסו את כל המצולעים לתיבת
 				<span style="color:hsl(0,90%,60%)">ה</span>
 				<span style="color:hsl(36,90%,60%)">ח</span>
 				<span style="color:hsl(72,90%,45%)">ב</span>
@@ -290,7 +293,7 @@
 			אם הטיות קטנות יצרו את הבלגן שאנו נמצאים בו היום, אי-הטיות קטנות עשויות לתקן את זה.
 			הביטו סביבכם. החברים שלכם, הקולגות שלכם, ובסביבת עבודתכם.
 			אם כולכם משולשים, אתם מפספסים כמה ריבועים מדהימים בחייכם.
-			הושיטו יד, מעבר לשכניכם המיידים ולריבועים הלא מוכרים.
+			הושיטו יד, מעבר לשכניכם המיידים אל הריבועים הלא מוכרים.
 		</p>
 		<iframe playable src="play/mini/mini_ending.html" width="600" height="80" scrolling="no"
 			style="margin:0 auto;display:block" embedded></iframe>
@@ -333,7 +336,7 @@
 
 				המסר הגדול של ימינו הוא שדרישה של מעט גיוון בסביבה שלים יוצרת בסוף הבדל עצום. הסתכלו על:
 				<a target="_blank" href="http://plzdiversifyyourpanel.tumblr.com/">Plz Diversify Your Panel</a>,
-				 יוזמה שבה דוברים שמיוצגים יתר על המידה מתחייבים לא לנאום בפאנלים ללא ייצוג מגוון.
+				יוזמה שבה דוברים שמיוצגים יתר על המידה מתחייבים לא לנאום בפאנלים ללא ייצוג מגוון.
 				<br><br>
 
 				הפוסט "משחק" הזה נוצר בהשראת האתר
