--- a/translator/translator.html
+++ b/translator/translator.html
@@ -125,11 +125,11 @@
             })
             draw(function (ctx, img) {
                 ctx.drawImage(img, 0, 0);
-                tapeRect(ctx, 5, 164, 20, 105);
+                tapeRect(ctx, 5, 134, 20, 160);
                 tapeRect(ctx, 30, 275, 40, 18);
                 putText(ctx, 40, 293, 20, "#666", "Alef-Latin-Hebrew", "זמן");
                 ctx.rotate(Math.PI / -2);
-                putText(ctx, -230, 20, 20, "#666", "Alef-Latin-Hebrew", "היפרדות");
+                putText(ctx, -250, 20, 20, "#666", "Alef-Latin-Hebrew", "אחוז ההפרדה");
             })
             // make download button
             var button = document.createElement("button");
