--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
 					<br><br>
 
 					<b>תרגומים:</b><br>
+					<a target="_blank" href="http://ncase.me/polygons">English</a>,
 					<a target="_blank" href="http://ncase.me/polygons-es">Spanish</a>,
 					<a target="_blank" href="http://ncase.me/polygons-fr">French</a>,
 					<a target="_blank" href="http://ncase.me/polygons-de">German</a>,
