--- a/play/intro/intro.html
+++ b/play/intro/intro.html
@@ -1,47 +1,62 @@
 <!doctype html>
 <html>
+
 <head>
 	<style>
-	body{
-		margin:0;
-		font-family: sans-serif;
-		font-weight: 100;
-	}
-	a{
-		color: #666;
-	}
-	a:hover{
-		color: #aaa;
-	}
-	#intro{
-		width:1280px; height:550px; background:#000; position:relative; overflow:hidden
-	}
-	#intro > #intro_shading{
-		position: absolute;
-		background:url(intro_banner.png);
-		width:1280px; height:550px;
-	}
-	#intro > #intro_text{
-		color: #333;
-		text-align: center;
-		width: 500px;
-		font-size: 30px;
-		font-weight: 100;
-		position: absolute;
-		width:100%;
-		top: 280px;
-		letter-spacing: 2px;
-	}
+		body {
+			margin: 0;
+			font-family: sans-serif;
+			font-weight: 100;
+		}
+
+		a {
+			color: #666;
+		}
+
+		a:hover {
+			color: #aaa;
+		}
+
+		#intro {
+			width: 1280px;
+			height: 550px;
+			background: #000;
+			position: relative;
+			overflow: hidden
+		}
+
+		#intro>#intro_shading {
+			position: absolute;
+			background: url(intro_banner.png);
+			width: 1280px;
+			height: 550px;
+		}
+
+		#intro>#intro_text {
+			color: #333;
+			text-align: center;
+			width: 500px;
+			font-size: 30px;
+			font-weight: 100;
+			position: absolute;
+			width: 100%;
+			top: 280px;
+			letter-spacing: 2px;
+		}
 	</style>
 </head>
+
 <body>
 	<div id="intro">
 		<canvas id="canvas" width="1280" height="300" style="position:absolute;bottom:0"></canvas>
 		<div id="intro_shading"></div>
 		<div id="intro_text" dir="rtl">
 			נכתב ע"י
-			<a href="http://vihart.com/" target="_blank">vi hart</a> + <a href="http://www.patreon.com/ncase" target="_blank">nicky case</a>
+			<a href="http://vihart.com/" target="_blank">vi hart</a> + <a href="http://www.patreon.com/ncase"
+				target="_blank">nicky case</a>
 			<div style='font-size:14px; letter-spacing:0; line-height:20px; margin-top:15px'>
+				<a target="_parent" href="http://ncase.me/polygons">English</a>
+				|
 				<a target="_parent" href="http://ncase.me/polygons-es">español</a>
 				|
 				<a target="_parent" href="http://ncase.me/polygons-de">deutsch</a>
@@ -71,12 +86,11 @@
 				<a target="_parent" href="//www.aularon.com/playables/polygons-ar/">العربيّة</a>
 				|
 				<a target="_parent" href="http://zlira.github.io/polygons/">Українська</a>
-				|
-				<a target="_parent" href="http://ncase.me/polygons-he">עברית</a>  <!--todo -->
 			</div>
 		</div>
 	</div>
 </body>
+
 </html>
 <script src="MouseBlah.js"></script>
 <script src="intro.js"></script>
