--- a/play/intro/intro.html
+++ b/play/intro/intro.html
@@ -54,6 +54,12 @@
 			נכתב ע"י
 			<a href="http://vihart.com/" target="_blank">vi hart</a> + <a href="http://www.patreon.com/ncase"
 				target="_blank">nicky case</a>
+			<br/>
+			<div style='font-size:20px; line-height:35px'>
+			תרגום לעברית:
+			<a href="https://about.me/vehpus" target="_blank">משה גורדן רדיאן</a> & <a href="https://www.inquisitivemuggles.com/"
+				target="_blank">שירי אבני</a>
+				</div>
 			<div style='font-size:14px; letter-spacing:0; line-height:20px; margin-top:15px'>
 				<a target="_parent" href="http://ncase.me/polygons">English</a>
 				|
