Small wording change

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 					- מכשיר יוצאי אתיופיה בתכנים טכנולוגים על מנת לשלבם בתעשייה
 					<br>
 					<a target="_blank" href="https://she-codes.org/he/home-heb/">she codes</a>
-					- מלמד נשים לתכנת במטרה שישראל תגיע ל50% מפתחות תכנה
+					- מכשיר נשים לתכנת במטרה שישראל תגיע ל50% מפתחות תכנה
 					<br>
 					<a target="_blank" href="http://code2040.org/">tsofen</a>
 					- פועל למען הכשרה ושילוב של ערבי ישראל בהיי-טק
